[gd_scene load_steps=10 format=3 uid="uid://d3spkrjldf78p"]

[ext_resource type="Script" path="res://Scripts/game_ui.gd" id="1_ig3k8"]
[ext_resource type="FontFile" uid="uid://cu4lf4od2owng" path="res://Assets/font/FlappyBird.ttf" id="1_r7e8n"]
[ext_resource type="Texture2D" uid="uid://x218sp1de1n0" path="res://Assets/gameover.png" id="3_oygtk"]
[ext_resource type="Texture2D" uid="uid://dobyog6immdwa" path="res://Assets/pixil-frame-0.png" id="4_y552t"]
[ext_resource type="Texture2D" uid="uid://d3thcfh364f4l" path="res://Assets/resetbutton.png" id="5_ierdv"]

[sub_resource type="Theme" id="Theme_ufgnb"]
default_font = ExtResource("1_r7e8n")
default_font_size = 60

[sub_resource type="Theme" id="Theme_yabmh"]
default_font = ExtResource("1_r7e8n")
default_font_size = 30

[sub_resource type="Theme" id="Theme_6lu3o"]
default_font = ExtResource("1_r7e8n")
default_font_size = 30

[sub_resource type="Theme" id="Theme_n3ypf"]
default_font = ExtResource("1_r7e8n")
default_font_size = 35

[node name="GameUi" type="CanvasLayer"]
script = ExtResource("1_ig3k8")

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 120

[node name="Score" type="Label" parent="MarginContainer"]
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_ufgnb")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="Label" parent="MarginContainer"]
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_ufgnb")
theme_override_colors/font_shadow_color = Color(0.197988, 0.123369, 0.0150571, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 80
text = "FlappyBird"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 21

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_oygtk")

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0, 0, 0, 0)
texture_filter = 1
custom_minimum_size = Vector2(100, 130)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.136
anchor_top = -0.085
anchor_right = 1.225
anchor_bottom = 1.795
offset_left = -49.6
offset_top = -15.95
offset_right = 50.4
offset_bottom = -15.95
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("4_y552t")

[node name="ScorePanel" type="Label" parent="MarginContainer/VBoxContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.38
anchor_top = 0.18
anchor_right = 0.6
anchor_bottom = 0.41
offset_top = 14.4
offset_bottom = 14.4
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yabmh")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.703808, 0.703808, 0.703808, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabelPanel" type="Label" parent="MarginContainer/VBoxContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.205
anchor_top = 0.04
anchor_right = 0.795
anchor_bottom = 0.295
offset_top = 6.8
offset_bottom = 6.8
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6lu3o")
theme_override_colors/font_shadow_color = Color(0.701961, 0.701961, 0.701961, 1)
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestPanel" type="Label" parent="MarginContainer/VBoxContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.38
anchor_top = 0.18
anchor_right = 0.6
anchor_bottom = 0.41
offset_top = 69.4
offset_bottom = 69.4
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yabmh")
theme_override_colors/font_shadow_color = Color(0.701961, 0.701961, 0.701961, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestLabelPanel" type="Label" parent="MarginContainer/VBoxContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.205
anchor_top = 0.04
anchor_right = 0.795
anchor_bottom = 0.295
offset_left = -0.500002
offset_top = 61.6
offset_right = -0.5
offset_bottom = 61.6
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6lu3o")
theme_override_colors/font_shadow_color = Color(0.701961, 0.701961, 0.701961, 1)
text = "BEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_n3ypf")
theme_override_constants/outline_size = 0
text = "Reset"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ierdv")
expand_mode = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
